Remove -Dnet.bytebuddy.experimental=true and update assertj version