@@ -90,7 +90,7 @@
     <log4j.version>2.22.0</log4j.version>
     <okhttp.version>4.12.0</okhttp.version>
 
-    <assertj.version>3.24.2</assertj.version>
+    <assertj.version>3.25.1</assertj.version>
     <awaitility.version>4.2.0</awaitility.version>
     <junit-jupiter.version>5.10.1</junit-jupiter.version>
     <mockito.version>5.8.0</mockito.version>
@@ -348,9 +348,6 @@
             <classpathDependencyExclude>org.apache.logging.log4j:log4j-jul
             </classpathDependencyExclude>
           </classpathDependencyExcludes>
-          <!-- TODO: remove when assertj releases a new version, and includes updated bytebuddy.
-       https://github.com/mockito/mockito/issues/3119#issuecomment-1732179039 -->
-          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
         <dependencies>
           <!-- needed for surefire.
@@ -389,9 +386,6 @@
           </systemPropertyVariables>
           <!-- Ensure scope leak cause ends up in the console -->
           <trimStackTrace>false</trimStackTrace>
-          <!-- TODO: remove when assertj releases a new version, and includes updated bytebuddy.
-               https://github.com/mockito/mockito/issues/3119#issuecomment-1732179039 -->
-          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
 
